hard-gists/5106221/run.log
=== Docker Run Log for 5106221 ===
Started at: Mi 29. Okt 15:23:02 CET 2025

[2025-10-29 15:23:02] START: Running container for 5106221
[2025-10-29 15:23:03] SUCCESS: Container 6bfbd04550a7090ad3ccce3ed62f4b9fc350cf3f9c51163cf3061efedb8daad4 started for 5106221
=== Container logs for 5106221 ===
  File "/snippet.py", line 118
    print "No filenames specified"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5106221 ===
[2025-10-29 15:23:05] INFO: Container 6bfbd04550a7090ad3ccce3ed62f4b9fc350cf3f9c51163cf3061efedb8daad4 has stopped
